--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -74,35 +74,30 @@ include(EnvCompilationFlags)
 
 ########### BASE #####
 
-find_package(OpticksBoost REQUIRED)
 find_package(GLM  REQUIRED)
-
-find_package(BCfg REQUIRED)
-find_package(BRegex REQUIRED)
+find_package(OpticksBoost REQUIRED)
+find_package(BoostRap REQUIRED)
 find_package(NPY   REQUIRED)
 find_package(OpticksCore REQUIRED)
 
 set(BASE_INCLUDES
-   ${OpticksBoost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
-   ${BCfg_INCLUDE_DIRS} 
-   ${BRegex_INCLUDE_DIRS}
+   ${OpticksBoost_INCLUDE_DIRS} 
+   ${BoostRap_INCLUDE_DIRS}
    ${NPY_INCLUDE_DIRS} 
    ${OpticksCore_INCLUDE_DIRS} 
 )
 set(BASE_LIBRARIES
-   ${OpticksBoost_LIBRARIES}
    ${GLM_LIBRARIES}
-   ${BCfg_LIBRARIES}
-   ${BRegex_LIBRARIES}
+   ${OpticksBoost_LIBRARIES}
+   ${BoostRap_LIBRARIES}
    ${NPY_LIBRARIES}
    ${OpticksCore_LIBRARIES}
 )
 set(BASE_DEFINITIONS
-   ${OpticksBoost_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
-   ${BCfg_DEFINITIONS}
-   ${BRegex_DEFINITIONS}
+   ${OpticksBoost_DEFINITIONS} 
+   ${BoostRap_DEFINITIONS}
    ${NPY_DEFINITIONS}
    ${OpticksCore_DEFINITIONS}
 )
