--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -7,8 +7,7 @@ include(EnvCompilationFlags)
 
 find_package(OpticksBoost REQUIRED)
 find_package(GLM REQUIRED)
-find_package(BRegex REQUIRED)
-find_package(BCfg REQUIRED)
+find_package(BoostRap REQUIRED)
 find_package(NPY REQUIRED)
 find_package(OpticksCore REQUIRED)
 
@@ -18,24 +17,21 @@ set(INCLUDE_DIRS
    ${OpticksBoost_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS} 
 
-   ${BRegex_INCLUDE_DIRS} 
-   ${BCfg_INCLUDE_DIRS} 
+   ${BoostRap_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
    ${OpticksCore_INCLUDE_DIRS}
 )
 
 set(LIBRARIES
    ${OpticksBoost_LIBRARIES}
-   ${BRegex_LIBRARIES}
-   ${BCfg_LIBRARIES}
+   ${BoostRap_LIBRARIES}
    ${NPY_LIBRARIES}
    ${OpticksCore_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${OpticksBoost_DEFINITIONS} 
-   ${BRegex_DEFINITIONS} 
-   ${BCfg_DEFINITIONS} 
+   ${BoostRap_DEFINITIONS} 
    ${OpticksCore_DEFINITIONS} 
 )
 
