geocache created/loaded on windows, debugging the old way as gdb not providing stacks

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCES
    fsutil.cc 
    BLog.cc
    BCfg.cc
+   BSys.cc
 ) 
 
 set(HEADERS
@@ -32,6 +33,7 @@ set(HEADERS
    dbg.hh
    BLog.hh
    BCfg.hh
+   BSys.hh
 )
 
 
