reposition infrastructure code from npy- to brap-

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -9,6 +9,9 @@ find_package(OpticksBoost REQUIRED)
 
 set(LIBRARIES
    ${OpticksBoost_LIBRARIES}
+
+   ssl
+   crypto
 )
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
@@ -18,27 +21,42 @@ add_definitions(
    ${OpticksBoost_DEFINITIONS} 
 )
 
-
 set(SOURCES
-   regexsearch.cc
-   fsutil.cc 
-   BLog.cc
-   BCfg.cc
-   BSys.cc
+
+BCfg.cc
+BLog.cc
+BSys.cc
+dirutil.cc
+fsutil.cc
+jsonutil.cc
+md5digest.cc
+regexsearch.cc
+stringutil.cc
+timeutil.cc
+
 ) 
 
 set(HEADERS
-   regexsearch.hh
-   fsutil.hh 
-   dbg.hh
-   BLog.hh
-   BCfg.hh
-   BSys.hh
+
+BCfg.hh
+BLog.hh
+BSys.hh
+dirutil.hh
+fsutil.hh
+jsonutil.hh
+md5digest.hh
+regexsearch.hh
+stringutil.hh
+timeutil.hh
+
+dbg.hh
 )
 
 
+# appends to flags for specific files : trying to quell warnings from underlying boost code
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    set_source_files_properties(BLog.cc      PROPERTIES COMPILE_FLAGS -Wno-sign-compare)
+   set_source_files_properties(jsonutil.cc  PROPERTIES COMPILE_FLAGS -Wno-all)
 endif (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
 
 
