--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -2,41 +2,71 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name BoostRap)
 project(${name})
 
+include(GenerateExportHeader)
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
+
+
+set(Boost_USE_STATIC_LIBS 1)
 
 find_package(OpticksBoost REQUIRED)
 
 set(LIBRARIES
    ${OpticksBoost_LIBRARIES}
-
-   ssl
-   crypto
 )
+
+
+
+if(UNIX) 
+   set(LIBRARIES ${LIBRARIES} ssl crypto)
+endif(UNIX)
+
+message("${name}:LIBRARIES : ${LIBRARIES} ")
+
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
+   ${CMAKE_CURRENT_BINARY_DIR}
    ${OpticksBoost_INCLUDE_DIRS} 
 )
 add_definitions(
    ${OpticksBoost_DEFINITIONS} 
 )
 
-set(SOURCES
 
-BCfg.cc
-BLog.cc
-BSys.cc
-dirutil.cc
-fsutil.cc
-jsonutil.cc
-md5digest.cc
-regexsearch.cc
-stringutil.cc
-timeutil.cc
+# BLog fsutil BSys depend on each other and boost 
+# BCfg depends only on boost
+
+
+
+
+set(SOURCES
+  BLog.cc
+  fsutil.cc
+  BSys.cc
+  BCfg.cc
+  dirutil.cc
+  jsonutil.cc
+
+  regexsearch.cc
+  stringutil.cc
+  
+  md5.c
 
 ) 
 
+set(SOURCES_FAILING
+
+  timeutil.cc
+  md5digest.cc
+
+)
+
+
 set(HEADERS
+)
+
+
+set(HEADERS_ALL
 
 BCfg.hh
 BLog.hh
@@ -63,7 +93,20 @@ endif (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
 
 add_library( ${name}  SHARED ${SOURCES})
 
+
+set(EXPORT_HDR BRAP_API_EXPORT.h)
+generate_export_header(${name}
+                        EXPORT_MACRO_NAME BRAP_API
+                         EXPORT_FILE_NAME ${EXPORT_HDR}
+                      )
+
 target_link_libraries( ${name}  ${LIBRARIES} )
+
+set(HEADERS 
+        ${HEADERS} 
+        ${CMAKE_CURRENT_BINARY_DIR}/${EXPORT_HDR}
+)
+
 
 
 install(TARGETS ${name} DESTINATION lib)
@@ -71,6 +114,6 @@ install(FILES ${HEADERS} DESTINATION include/${name})
 
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
-add_subdirectory(tests)
+#add_subdirectory(tests)
 
 
