get build to work back on macOS with simplified digest-ing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ find_package(OpticksBoost REQUIRED QUIET)
 
 add_subdirectory(boostrap)    
 
-
+set(REST ON)
 if(REST)
    add_subdirectory(numerics/npy)   
    add_subdirectory(optickscore)         
