bulk of NPY now brought over to the dark side

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ find_package(OpticksBoost REQUIRED QUIET)
 
 add_subdirectory(boostrap)    
 #add_subdirectory(boostrapclient)    
-#add_subdirectory(numerics/npy)   
+add_subdirectory(numerics/npy)   
 #add_subdirectory(numerics/npyclient)   
 
 #set(REST ON)
