--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -108,6 +108,6 @@ install(FILES ${HEADERS} DESTINATION include/${name})
 
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
-add_subdirectory(tests)
+#add_subdirectory(tests)
 
 
